override blog docs notfound

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -29,6 +29,7 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-@import './../theme/pages/navbar.scss';
-@import './../theme/pages/main.scss';
 @import './../theme/pages/footer.scss';
+@import './../theme/pages/main.scss';
+@import './../theme/pages/navbar.scss';
+@import './../theme/pages/presentation.scss';
