--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -21,17 +21,17 @@
   align-items: center;
   justify-content: center;
   -ms-flex-pack: center;
-}
-.title__header .filter::after {
-  background-color: rgba(0, 0, 0, .5);
-  content: "";
-  display: block;
-  height: 100%;
-  left: 0;
-  top: 0;
-  position: absolute;
-  width: 100%;
-  z-index: 1;
+  .filter::after {
+    background-color: rgba(0, 0, 0, .5);
+    content: "";
+    display: block;
+    height: 100%;
+    left: 0;
+    top: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+  }
 }
 .title__center {
   z-index: 1;
@@ -57,7 +57,6 @@
   margin: 0;
   padding: 15px;
   color: var(--header-text-color);
-  /* background: $white-color; */
   /* -webkit-background-clip: text; */
   /* -webkit-text-fill-color: transparent; */
 }
