--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- robot
     {% if page.indexing == false %}
       <meta name="robots" content="noindex">
     {% endif %}
+    -->
 
     {% if page.collectionpage %}
       {% seo title=false %}
