add search console tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <!-- General meta -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="a9wq5lRR0OUTfvUGy05Qo4spTGDp587VNRZNA06qvRA" />
 
     <!-- robot
     {% if page.indexing == false %}
