--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,8 @@ layout: default
     {% include post-meta.html %}
     {{ content }}
 
+    {% include button.html text="Buy me a coffee ☕️" link="https://buymeacoffee.com/jwher" color="#f68140" %}
+
     {% include nav-share.html %}
 
     {% include post-comments.html %}
