--- a/_includes/post-comments.html
+++ b/_includes/post-comments.html
@@ -15,3 +15,14 @@
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
+
+{% if site.utterances and page.comments != false  %}
+  <script src="https://utteranc.es/client.js"
+          repo="JWHer/JWHer"
+          issue-term="url"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+  </script>
+  <noscript>Please enable JavaScript to view comments.</noscript>
+{% endif %}
