--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -10,7 +10,7 @@
                   <h2><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h2>
                 </th>
                 {% if page.thumbnail-img %}
-                <th rowspan="2">
+                <th rowspan="2" style="min-width: 15vh;">
                   <a href="{{ site.baseurl }}{{ page.url }}"><img src ="{{ page.thumbnail-img }}" class="img-link" /></a>
                 </th>
                 {% endif %}
