--- a/src/theme/DocPage/Layout/styles.module.scss
+++ b/src/theme/DocPage/Layout/styles.module.scss
@@ -1,6 +1,10 @@
 .docPage {
     display: flex;
     width: 100%;
+
+    h1, h2, h3 {
+        margin-top: 5rem; // 여기서 2rem은 원하는 마진 크기에 맞게 조절
+    }
 }
 
 .docsWrapper {
